--- a/raw/AESTHETIC-Win95.css
+++ b/raw/AESTHETIC-Win95.css
@@ -16,6 +16,7 @@
     border-right: 4px solid #3e3e3e;
     border-left: 4px solid #C0C0C0;
     border-bottom: 4px solid #3e3e3e;
+	background: #fff;
 }
 
 .win-buttons.win-buttons {
