--- a/raw/AESTHETIC-Win95.css
+++ b/raw/AESTHETIC-Win95.css
@@ -802,3 +802,39 @@ button.btn.icon.icon-logout {
 .guilds-wrapper .guilds .guild {
     background: #1e212400;
 }
+
+.search-popout {
+    right: 105px !important;
+    top: 72px !important;
+    box-shadow: none !important;
+    border: 1px solid black;
+    border-radius: 0px;
+    width: 320px !important;
+    height: 298px !important;
+}
+
+.popout.popout-bottom.no-shadow.search-popout {
+    left: initial !important;
+    width: 320px !important;
+    height: 298px !important;
+    border-top: 1px solid black;
+}
+
+.search {
+    border-left: 1px;
+    border-right: 1px;
+}
+
+.search .search-bar {
+    border-radius: 0px !important;
+    padding-top: 14px;
+}
+
+.search .focused .popout-open .search-bar {
+    width: 320px !important;
+}
+
+.search.popout-open .search-bar {
+    width: 322px !important;
+    margin-right: -1px;
+}
